--- a/epic.ui/theme/default/less/epic.ui.less
+++ b/epic.ui/theme/default/less/epic.ui.less
@@ -1,4 +1,6 @@
-﻿@import url('partials/mixins.less');
+﻿@import url('partials/helpers.less');
+@import url('partials/mixins.less');
 @import url('partials/variables.less');
 
 @import url('notice.less');
+@import url('viewport.less');
