--- a/epic.ui/theme/default/less/partials/helpers.less
+++ b/epic.ui/theme/default/less/partials/helpers.less
@@ -1,10 +1,10 @@
 ﻿@import "mixins.less";
 
-.float-left {
+.pull-left {
 	float: left;
 }
 
-.float-right {
+.pull-right {
 	float: right;
 }
 
@@ -79,27 +79,8 @@
 	}
 }
 
-.request-status {
+.busy-status {
 	padding-left: 30px;
 	vertical-align: middle;
 	background: transparent url('/resources/img/icon-loading.gif') center left no-repeat;
-}
-
-.title {
-	display: block;
-	width: 100%;
-	height: 43px;
-
-	padding-bottom: 10px;
-	margin-bottom: 30px;
-
-	color: #333333;
-	font-size: 26px;
-
-	border: 1px solid #e5e5e5;
-	border-width: 0 0 1px 0;
-
-	> label {
-		line-height: 33px;
-	}
 }
