--- a/epic.ui/theme/default/less/epic.ui.less
+++ b/epic.ui/theme/default/less/epic.ui.less
@@ -1,6 +1,8 @@
-﻿@import url('partials/helpers.less');
-@import url('partials/mixins.less');
-@import url('partials/variables.less');
+﻿@import "partials/mixins.less";
+@import "partials/variables.less";
 
-@import url('notice.less');
-@import url('viewport.less');
+@import "helpers.less";
+@import "notice.less";
+@import "viewport.less";
+@import "box.less";
+@import "buttons.less";
