--- a/epic.ui/theme/default/less/notice.less
+++ b/epic.ui/theme/default/less/notice.less
@@ -1,8 +1,8 @@
 ﻿// NOTICE
 // ===================================================================
 
-@import url('partials/mixins.less');
-@import url('partials/variables.less');
+@import "partials/mixins.less";
+@import "partials/variables.less";
 
 #epic-notification-rail {
 	position: fixed;
